CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")
SET(CMAKE_CXX_FLAGS "-std=c++11")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA)


IF(NOT EXISTS ${BASLER_DIR})
  SET(BASLER_DIR "$ENV{BASLER_DIR}")
ENDIF()
MESSAGE("BASLER_DIR: " ${BASLER_DIR})

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/TH" "${BASLER_DIR}/include")

LINK_DIRECTORIES("${Torch_INSTALL_LIB}" "${BASLER_DIR}/lib64")
add_definitions(-Wl,-as-needed)

SET(src basler.cpp ${PROTO_SRCS})

FILE(GLOB luasrc *.lua)

ADD_LIBRARY(tbasler MODULE ${src})
TARGET_LINK_LIBRARIES(tbasler TH pylonbase)

### Torch packages supposes libraries prefix is "lib"
SET_TARGET_PROPERTIES(tbasler PROPERTIES
  PREFIX "lib"
  IMPORT_PREFIX "lib")
    
INSTALL(TARGETS tbasler
  RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/basler")
